# fastapi-pluggable

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml  publish.yml  ruff.yml
fastapi_pluggable/: __init__.py
