[tool.poetry]
name = "fastapi-pluggable"
version = "0.1.0"
description = "Make your FastAPI app pluggable with entrypoints"
authors = ["Brandon Spendlove <brandon@veesix-networks.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
